2002-02-01  Marcus Brinkmann  <marcus@g10code.de>

	* Makefile.am (MOSTLYCLEANFILES): New variable.

2002-01-23  Werner Koch  <wk@gnupg.org>

	* assuan-socket-connect.c (LOGERRORX): and removed typo.

2002-01-22  Marcus Brinkmann  <marcus@g10code.de>

	* assuan-socket-connect.c (LOGERRORX): Reverse arguments to fputs.

2002-01-21  Werner Koch  <wk@gnupg.org>

	* assuan-connect.c: Move all except assuan_get_pid to...
	* assuan-pipe-connect.c: this.
	(assuan_pipe_disconnect): Removed.
	(do_finish, do_deinit): New 
	(assuan_pipe_connect): and set them into the context.
	* assuan-socket-connect.c: New.
	
	* assuan-util.c (_assuan_log_sanitized_string): New.

	* assuan-pipe-server.c (assuan_init_pipe_server): Factored most
	code out to ...
	(_assuan_new_context): new func.
	(_assuan_release_context): New
	* assuan-connect.c (assuan_pipe_connect): Use the new functions.

2002-01-20  Werner Koch  <wk@gnupg.org>

	* assuan.h: Added Invalid Option error code.

	* assuan-handler.c (std_handler_option): New.
	(std_cmd_tbl): Add OPTION as standard command.
	(assuan_register_option_handler): New.
	(dispatch_command): Use case insensitive matching as a fallback.
	(my_strcasecmp): New.

2002-01-19  Werner Koch  <wk@gnupg.org>

	* assuan-buffer.c (_assuan_read_line): Add output logging.
	(assuan_write_line): Ditto.
	(_assuan_cookie_write_data): Ditto.
	(_assuan_cookie_write_flush): Ditto.
	* assuan-util.c (_assuan_log_print_buffer): New.
	(assuan_set_log_stream): New.
	(assuan_begin_confidential): New.
	(assuan_end_confidential): New.

	* assuan-defs.h: Add a few handler variables.
	* assuan-pipe-server.c (assuan_deinit_pipe_server): Removed.
	(deinit_pipe_server): New.
	(assuan_deinit_server): New.  Changed all callers to use this.
	* assuan-listen.c (assuan_accept): Use the accept handler.
	* assuan-handler.c (process_request): Use the close Handler.
	* assuan-socket-server.c: New.

2002-01-14  Werner Koch  <wk@gnupg.org>
